--- a/package.json
+++ b/package.json
@@ -40,5 +40,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@iconify-icons/uil": "^1.1.1",
+    "@iconify/react": "^1.1.4"
   }
 }
